--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <p>Эта <a href="https://t.me/thuundra">Сандра</a> кидает на тортики!</p>
 
-<p>Будьте осторожны! Прежде чем верить ей, подумайте нескольок раз! Только посмортите на ее хитрую рожицу! </p>
+<p>Будьте осторожны! Прежде чем верить ей, подумайте несколько раз! Только посмортите на ее хитрую рожицу! </p>
           <img src="san.jpg">
 
 <p>Я сказал Рожицу!</p>
